Change form border size

--- a/index.html
+++ b/index.html
@@ -502,8 +502,9 @@ dark:bg-neutral-800
         </div>
       </div>
       <form class=" relative 
-    border-8 
+    border-4
     border-neutral-900 
+    dark:border-amber-400
     p-6 
     rounded-lg 
     grid gap-8 
